Profile text fix but mobile size issue
The profile text has been fixed for desktop but adding a min-width on line 19 in the css made the mobile views load too big. Fix coming soon.

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@
   	font-family: 'Noto Sans KR', sans-serif;
   	line-height: 1.7;
   	background: #F9FAFA;
+  	min-width: 1100px;
+  	margin: auto;
+  	padding: 0.5rem;
   }
 
 
@@ -42,7 +45,7 @@
   }
 
   h2 {
-  	font-size: medium;
+  	font-size: 1em;
   	padding-top: 2em;
   	padding-bottom: 1em;
   }
@@ -315,10 +318,6 @@
 
 @media (min-width:1024px) {
 
-  p {
-    font-size: 1.1vw;
-
-  }
 
   .upper {
    width: 90%;
@@ -330,6 +329,7 @@
    float: left;
    padding: 8px 0px 24px;
    margin: 0;
+   margin-left: 2rem;
 
  }
 
